# djangocms-ab-testing

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
djangocms_ab_testing/: ab_utils.py  admin.py  apps.py  cms_plugins.py  conf.py  middleware.py  models.py  urls.py  views.py
djangocms_ab_testing/management/commands/: seed_ab_data.py
djangocms_ab_testing/migrations/: 0001_initial.py
djangocms_ab_testing/static/djangocms_ab_testing/css/: ab_testing.css
djangocms_ab_testing/static/djangocms_ab_testing/js/: ab_tracking.js
djangocms_ab_testing/templates/ab_testing/: ab_test_plugin.html  ab_test_variant_plugin.html
djangocms_ab_testing/templates/ab_testing/admin/: abtest_change_form.html
